# rinux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  HARDWARE_ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Kconfig  LICENSE  Makefile  PHASE2_IMPLEMENTATION_SUMMARY.md  POST_MERGE_INSTRUCTIONS.md  PROJECT_STRUCTURE.md  PULL_REQUEST_SUMMARY.md  QUICKREF.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_PROCESS.md  SECURITY.md  TCP_IMPLEMENTATION_SUMMARY.md  build.rs  linker.ld  x86_64-unknown-rinux.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  copilot-instructions.md  dependabot.yml
docs/: ARCHITECTURE.md  BOOTABILITY_IMPLEMENTATION.md  BOOTABILITY_ROADMAP.md  BUILD.md  COVERAGE_SUMMARY.md  DEVELOPMENT.md  DRIVER_DEVELOPMENT.md  EXAMPLE_DRIVER.md  FEATURE_ADDITIONS.md  FEATURE_USAGE.md  FINAL_GAP_ANALYSIS_50_PERCENT.md  GAP_ANALYSIS_PRESENTATION.md  GAP_ANALYSIS_REFRESHED.md  GAP_CLOSURE_PROGRESS.md  GAP_REDUCTION_SUMMARY.md  HARDWARE_IMPLEMENTATION_SUMMARY.md  HARDWARE_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  KERNEL_GAPS_ANALYSIS.md  LINUX_COVERAGE.md  NETWORK_STACK.md  QUICKREF.md  QUICK_START_BOOTABILITY.md  ROADMAP.md  SECURITY.md  SESSION_IMPLEMENTATION.md  SUMMARY.md  TCP_IMPLEMENTATION.md  TEST_COVERAGE.md  USB.md
drivers/: Cargo.toml
drivers/block/: Cargo.toml
drivers/block/src/: ahci.rs  ahci_irq.rs  device.rs  lib.rs  nvme.rs  partition.rs  request.rs
init/: Cargo.toml
kernel/: Cargo.toml
lib/: Cargo.toml
mm/: Cargo.toml
scripts/: release.sh
src/: lib.rs  (+1 more)
(+154 files in other folders)
